add imges in the HTML and style images in CSS

--- a/code/html-assignment-1/styles.css
+++ b/code/html-assignment-1/styles.css
@@ -1,5 +1,7 @@
 body{
   background-color: #fbfff9;
+  width: 90%;
+  margin: 0 auto;
 }
 
 h1{
@@ -19,9 +21,10 @@ h3{
 }
 
 .section-div{
-  border: 3px solid #75c0ef;
+  border: 2px solid #75c0ef;
   margin: 10px;
   padding: 5px;
+  max-width: 1300px;
 }
 
 a{
@@ -31,4 +34,24 @@ a{
 
 a:hover{
   text-decoration: underline;
+}
+
+.wayde-img{
+  height: 255px;
+  margin: 6px 6px;
+}
+
+#wayde-div{
+  background-color: #9dcdcd;
+  max-width: 1200px;
+}
+
+.rwc-img{
+  height: 214px;
+  margin: 6px 6px;
+}
+
+#rwc-div{
+  background-color: #9dcdcd;
+  max-width: 1200px;
 }
