--- a/code/HTML Assignment-1/style.css
+++ b/code/HTML Assignment-1/style.css
@@ -29,9 +29,9 @@ header {
 }
 
 h1 {
-    font-size: 45px;
+    font-size: 3rem;
     color: #faccff;
-    word-spacing: 20px;
+    word-spacing: 0.5em;
     line-height: 1;
 }
 
