--- a/code/css-assigment-1/styles.css
+++ b/code/css-assigment-1/styles.css
@@ -6,7 +6,9 @@
 .challenge-2 {
   /* write code here */
   display: flex;
+  justify-content: end;
   flex-direction: row-reverse;
+
 }
 
 .challenge-3 {
