add CSS styles to assignment

--- a/code/css-assignment-1/style.css
+++ b/code/css-assignment-1/style.css
@@ -1,21 +1,31 @@
 .challenge-1 {
   /* write code here */
+  display: flex;
 }
 
 .challenge-2 {
   /* write code here */
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .challenge-3 {
   /* write code here */
+  display: flex;
+  justify-content: flex-end;
 }
 
 .challenge-4 {
   /* write code here */
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .challenge-5 {
   /* write code here */
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 /* 
@@ -25,6 +35,10 @@ children of .challenge-6 elements.
 */
 .challenge-6 .bubble {
   /* write code here */
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .challenge-7 {
@@ -33,14 +47,19 @@ children of .challenge-6 elements.
 
 .challenge-7 .red {
   /* write code here */
+  flex-grow: 1;
 }
 
 .challenge-8 {
   /* write code here */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .challenge-8 .red {
   /* write code here */
+  order: 1;
 }
 
 /* DO NOT CHANGE ANYTHING BELOW HERE */
