--- a/code/assignment/style.css
+++ b/code/assignment/style.css
@@ -1,21 +1,29 @@
 .challenge-1 {
-    /* write code here */
+    
+    
+        display: flex;
+    
 }
 
 .challenge-2 {
-    /* write code here */
+    display: flex;
+    flex-flow: row-reverse;
 }
 
 .challenge-3 {
-    /* write code here */
+    display:flex;
+    justify-content: flex-end;
 }
 
 .challenge-4 {
-    /* write code here */
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .challenge-5 {
-    /* write code here */
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
 
 /* 
@@ -23,24 +31,29 @@ Tip: This is called the "child selector".
 It selects all .bubble elements that are direct
 children of .challenge-6 elements. 
 */
-.challenge-6 .bubble {
-    /* write code here */
+.challenge-6 .bubble{
+   
+    align-content: center;
+    text-align: center;
 }
 
 .challenge-7 {
     display: flex;
+
 }
 
 .challenge-7 .red {
-    /* write code here */
+    flex-grow: 1;
+
 }
 
 .challenge-8 {
-    /* write code here */
+    display: flex;
+    flex-flow: column;
 }
 
 .challenge-8 .red {
-    /* write code here */
+    order: 1;
 }
 
 /* DO NOT CHANGE ANYTHING BELOW HERE */
