--- a/code/00_assignments/00_htmlcss/03_responsive_design/main.css
+++ b/code/00_assignments/00_htmlcss/03_responsive_design/main.css
@@ -186,4 +186,19 @@ header {
                                                     }
 
 
+/* For smallest of screens */
+@media only screen and (max-width:400px)            {
+    .card                                               {display: flex;
+                                                        flex-direction: column;}
+
+    .card img                                           {width: 100%;}
+
+    .card.right img                                     {order: 0;}
+
+        .card span                                      {width: 100%;
+                                                        height: 100%;
+                                                        box-sizing: border-box;
+                                                        padding: 2rem 1rem;}
+
+                                                    }
 
