--- a/Week5/grid.css
+++ b/Week5/grid.css
@@ -10,9 +10,9 @@ body {
     display: grid;
     height: 100vh;
     /* grid-template-columns: 2em 1fr 1fr; */
-    grid-template-rows: repeat(4, 1fr) min-content;   
+    /* grid-template-rows: repeat(4, 1fr) min-content;    */
     grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
-    /* grid-template-rows: auto; */
+    grid-template-rows: auto;
     grid-template-areas: 
         "one one one" /* One spans all columns */
         "two three four"
@@ -26,6 +26,7 @@ body {
     /* grid-column-start: 1; */
     /* grid-column-end: 4; */
     grid-area: one;
+    height: 100px;
 }
 .two{
     background-color: blue;
