--- a/code/responsive design assignment/style.css
+++ b/code/responsive design assignment/style.css
@@ -36,46 +36,6 @@ header {
 }
 
 
-
-
-body {
-    margin: 0;
-}
-
-#profile {
-    background-color: #f9b8b6;
-    padding: 1em;
-    margin: 1em;
-}
-
-#profile > img {
-    outline: 0.3rem solid #fff;
-    margin: 0.5em 0;
-}
-
-#profile > span {
-    font-size: 1.3em;
-    font-weight: 600;
-    padding-bottom: 1em;
-}
-
-.card {
-    border: 3px solid #006d9e;
-    margin: 0.2rem;
-}
-
-img {
-    width: 100%;
-}
-
-header {
-    background-color: #a7cddf;
-    font-size: 2em;
-    display: flex;
-    justify-content: center;
-}
-
-
 /* Media query for 500px */
 @media (min-width: 500px) {
     #gallery {
@@ -115,7 +75,7 @@ header {
 
     #gallery {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr; /* Simplified 3-column layout */
         gap: 1rem;
     }
 
