--- a/code/1-html-css-flexbox/style.css
+++ b/code/1-html-css-flexbox/style.css
@@ -23,13 +23,10 @@
     gap: 20px;
 }
 
-/* 
-Tip: This is called the "child selector". 
-It selects all .bubble elements that are direct
-children of .challenge-6 elements. 
-*/
 .challenge-6 .bubble {
-    /* write code here */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .challenge-7 {
