--- a/code/responsive design assignment/style.css
+++ b/code/responsive design assignment/style.css
@@ -46,7 +46,7 @@ header {
     .card {
         display: flex;
         align-items: center;
-        flex: 1 1 100%; /* Ensures full-width cards initially */
+        /* flex: 1 1 100%; Ensures full-width cards initially */
         margin: 1rem 0;
     }
 
@@ -79,7 +79,12 @@ header {
         gap: 1rem;
     }
 
-    card {
+    .card {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card right{
         display: flex;
         flex-direction: column;
     }
@@ -88,8 +93,12 @@ header {
         padding: 0.5rem;
         text-align: justify;
     }
-}.
 
+    .card right span {
+        padding: 0.5rem;
+        text-align: justify;
+    }
+}
 
 /* Media query for 1000px */
 @media (min-width: 1000px) {
@@ -98,38 +107,46 @@ header {
         gap: 2rem;
         flex-direction: row;
     }
-
+    
     #profile {
         flex: 1; /* Occupies 1/3 of the available width */
         background-color: #f9b8b6;
     }
-
+    
     #gallery {
         flex: 2; /* Occupies 2/3 of the available width */
         display: grid;
         grid-template-columns: 1fr 1fr 1fr; /* Creates three equal columns */
         gap: 1rem; /* Adds spacing between the grid items */
     }
-
+    
     .card {
-        border: 3px solid #006d9e;
         display: flex;
         flex-direction: column;
     }
-
+    
     .card img {
         width: 100%;
         object-fit: cover;
     }
-
+    
     .card span {
-        padding: 0.2rem;
+        padding: 0.5rem;
+        text-align: justify;
+    }
+
+    .card right {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card right img {
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .card right span {
+        padding: 0.5rem;
         text-align: justify;
     }
 }
-
-
-
-
-
-    
