--- a/code/Final-Project/shared.css
+++ b/code/Final-Project/shared.css
@@ -44,7 +44,6 @@ header h1 {
   border-radius: 25%;
   height: fit-content;
   margin: auto 0;
-
 }
 
 #logo img {
@@ -72,9 +71,23 @@ nav {
   width: clamp(10px, 14vw, 4rem);
   margin-right: 0;
 }
+nav > div {
+  border: 4px solid rgb(240, 196, 115);
+  border-radius: 20%;
+  padding: 0.5rem;
+}
+nav > div:hover{
+  font-size: 1.3rem;
+}
+
+nav div p {
+  text-wrap: nowrap;
+}
+
 footer {
   background-color: #3c4e61;
   color: #ffffff;
+  font-size: 1.5rem;
   text-align: center;
   margin-top: auto;
 }
