--- a/code/Responsive Assignment/style.css
+++ b/code/Responsive Assignment/style.css
@@ -68,6 +68,7 @@ header {
   .card {
     flex-direction: column;
     flex: 1 1 200px;
+    font-size: 16px;
   }
 
   .card img {
@@ -75,7 +76,7 @@ header {
   }
 
   .photo-label {
-    font-size: 0.7rem;
+    font-size: 1em;
     flex: 1;
   }
 }
